--- a/index.html
+++ b/index.html
@@ -82,12 +82,19 @@
         <div class="c1"> <img src="photos\files_phto5.jpeg" class="jimmy">
           
         </div>
-        <div class="c2"> <h2>Hey, Jimmy here</h2> <hr> I am an Information and Communication Technology Undergrad, a budding and learning Web developer, and a Writing Enthusiasist who notices things and point it out in my Blogs, aspire to become a admirable software developer. I know C++ and carry out problem solving on GFG through Data structures and Algorithm. Also with my personal Blogs, i am a community builder via author of blogs on Dev.to platform helping other folks to move forward, learn, and lead by sharing perspectives on open source contributions and projects.  
+        <div class="c2"> <h2>Hey, Jimmy here</h2> <hr> <div data-aos="fade-left"
+          data-aos-anchor="#example-anchor"
+          data-aos-offset="500"
+          data-aos-duration="500">I am an Information and Communication Technology Undergrad, a budding and learning Web developer, and a Writing Enthusiasist who notices things and point it out in my Blogs, aspire to become a admirable software developer. I know C++ and carry out problem solving on GFG through Data structures and Algorithm. Also with my personal Blogs, i am a community builder via author of blogs on Dev.to platform helping other folks to move forward, learn, and lead by sharing perspectives on open source contributions and projects.</div>  
           <ul class="social_list">
-            <li class="social_item"><a aria-label="twitter" href="https://twitter.com/Jimee_himself" class="social_link" target="_blank"><i class="fa-brands fa-twitter-square"></i></a></li>
-            <li class="social_item"><a aria-label="linkedin" href="https://www.linkedin.com/in/jimmy-taravia-298358200/" class="social_link" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-            <li class="social_item"><a aria-lebel="GitHub" href="https://github.com/Jimmy-Taravia2001" class="social_link" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-            <li class="social_item"><a aria-lebel="dev.to" href="https://dev.to/jimmytaravia" class="social_link" target="_blank"><i class="fa-brands fa-dev"></i></a></li>
+            <li class="social_item" data-aos="fade-up"
+            data-aos-duration="800"><a aria-label="twitter" href="https://twitter.com/Jimee_himself" class="social_link" target="_blank"><i class="fa-brands fa-twitter-square"></i></a></li>
+            <li class="social_item" data-aos="fade-up"
+            data-aos-duration="900"><a aria-label="linkedin" href="https://www.linkedin.com/in/jimmy-taravia-298358200/" class="social_link" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li class="social_item" data-aos="fade-up"
+            data-aos-duration="1000"><a aria-lebel="GitHub" href="https://github.com/Jimmy-Taravia2001" class="social_link" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+            <li class="social_item" data-aos="fade-up"
+            data-aos-duration="1100"><a aria-lebel="dev.to" href="https://dev.to/jimmytaravia" class="social_link" target="_blank"><i class="fa-brands fa-dev"></i></a></li>
           </ul>
         
         </div>
