--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="c2"> <h2>Hey, Jimmy here</h2> <hr> <div data-aos="fade-left"
           data-aos-anchor="#example-anchor"
           data-aos-offset="500"
-          data-aos-duration="500">I am an Information and Communication Technology Undergrad, a budding and learning Web developer, and a Writing Enthusiasist who notices things and point it out in my Blogs, aspire to become a admirable software developer. I know C++ and carry out problem solving on GFG through Data structures and Algorithm. Also with my personal Blogs, i am a community builder via author of blogs on Dev.to platform helping other folks to move forward, learn, and lead by sharing perspectives on open source contributions and projects.</div>  
+          data-aos-duration="500">Jimmy Taravia is a researcher, web developer, software engineer, Blogger, and a problem solver. PS: He likes to review TV shows, fiction, and has keen interest being a critique of things that he likes observing and find root of those problems.  </div>  
           <ul class="social_list">
             <li class="social_item" data-aos="fade-up"
             data-aos-duration="800"><a aria-label="twitter" href="https://twitter.com/Jimee_himself" class="social_link" target="_blank"><i class="fa-brands fa-twitter-square"></i></a></li>
