--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="c1"> <img src="photos\files_phto5.jpeg" class="jimmy">
           
         </div>
-        <div class="c2"> <h2>Hey, Jimmy here</h2> <hr> <div data-aos="fade-left"
+        <div class="c2"> <h2>HEY, JIMMY HERE</h2> <hr> <div data-aos="fade-left"
           data-aos-anchor="#example-anchor"
           data-aos-offset="500"
           data-aos-duration="500">Jimmy Taravia is a researcher, web developer, software engineer, Blogger, and a problem solver. PS: He likes to review TV shows, fiction, and has keen interest being a critique of things that he likes observing and find root of those problems.  </div>  
