--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <div class="card_image" style="background:url('photos/Dev3.PNG'); background-size: cover;
                     background-repeat: no-repeat; background-position:center;"></div>
                     <div class="card_content">
-                      <div class="card_title certi_title"> <h1>TECH COMMUNITY BUILDER</h1> I am an author of various techincal blogs on Dev community platform discussing about diverse tech and softwatre related stuff, subsequently helping the comuunity to evolve, learn, and share their perspectives on software development, learning, teaching, and leading.</div>
+                      <div class="card_title certi_title"> <h1>TECH COMMUNITY BUILDER</h1> I am an author of various techincal blogs on Dev community platform discussing about diverse tech and software related stuff, subsequently helping the comuunity to evolve, learn, and share their perspectives on software development, learning, teaching, and leading.</div>
                       <a href="https://dev.to/jimmytaravia" target="_blank"class="link certi_link"><div class="ltext">-Visit-</div></a>
                     </div>
                   </div>
