Angular added and rearranged

--- a/index.html
+++ b/index.html
@@ -94,30 +94,39 @@
 
         <div class="zone blue grid-wrapper" id="sKills"> 
 
-            <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" data-aos="fade-up"
+            
+            <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" data-aos="fade-up"
+              data-aos-duration="800"></div>
+            <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg"  data-aos="fade-up"
               data-aos-duration="800"> </div>
-            <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" data-aos="fade-up"
+            <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" data-aos="fade-up"
               data-aos-duration="800"> </div>
+            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" data-aos="fade-up" 
+              data-aos-duration="800"></div>
             <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" data-aos="fade-up"
               data-aos-duration="800"> </div>
             <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" data-aos="fade-up"
               data-aos-duration="800"></div>
+            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg" data-aos="fade-up"
+              data-aos-duration="800"></div>
+            <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" data-aos="fade-up"
+              data-aos-duration="800"> </div>
+            <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" data-aos="fade-up"
+              data-aos-duration="800"> </div> 
             <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-plain-wordmark.svg" data-aos="fade-up"
-              data-aos-duration="800"> </div>
-            <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" data-aos="fade-up"
-              data-aos-duration="800"> </div>
-            <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg"  data-aos="fade-up"
               data-aos-duration="800"> </div>
             <div class="box zone"> <img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" data-aos="fade-up"
               data-aos-duration="800"> </div>
             <div class="box zone"> <img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-plain-wordmark.svg" data-aos="fade-up"
               data-aos-duration="800"> </div>
-            <div class="box zone"> <img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/canva/canva-original.svg" data-aos="fade-up"
+            <!-- <div class="box zone"> <img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/canva/canva-original.svg" data-aos="fade-up"
               data-aos-duration="800"> </div>
             <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" data-aos="fade-up"
               data-aos-duration="800"> </div>
             <div class="box zone"><img alt="Jimmy Taravia Skills section" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" data-aos="fade-up"
               data-aos-duration="800"> </div>
+            <div class="box zone"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/eslint/eslint-original-wordmark.svg" data-aos="fade-up"
+              data-aos-duration="800"></div> -->
 
 
     
